force-app/main/default/objects/Virtual_Account_Number__c/Virtual_Account_Number__c.object-meta.xml
<CustomObject>
    <label>Virtual Account Number</label>
    <nameField>
        <label>Virtual Account Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Account Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>