force-app/main/default/objects/Virtual_Account_Number__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Virtual Account Numbers</relationshipLabel>
    <relationshipName>Virtual_Account_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>