force-app/main/default/objects/Virtual_Account_Number__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>